# DES_FE_viscous_thermomechanical

./: Cargo.toml  readme.md
input/: sp_heat_cap_data.csv  thorndike_seg1_solid.gcode  viscosity_data3.csv
src/: Interpolator.rs  deadcode.rs  main.rs  model.rs  model_generator.rs  model_iso_td_con_visco.rs  model_iso_td_shc_td.rs  model_iso_td_shc_td_con.rs  model_orthotropic_td_shc.rs  model_updater.rs  model_with_structural.rs  primitives.rs  sparse_matrix.rs  sparse_matrix_new.rs  structural_model.rs  structural_model2.rs  time_temperature_activation_data.rs
