[package]
name = "atomistic_thermal_analysis"
version = "0.1.0"
authors = ["sunil bhandari <sundai2005@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.4.0"
num_cpus = "1.13.0"
rustc-hash = "1.1.0"



